--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="About">
       <div class="about">
         <div class="about-image">
-          <img src="C:\Users\srava\OneDrive\Pictures\Screenshots\Screenshot 2023-08-20 213335.png" alt="Profile Image">
+          <img src="Screenshot 2023-08-20 213335.png" alt="Profile Image">
         </div>
         <div class="about-content">
           <p>I'm thrilled to dive into the world of computer science as a newcomer, eager to absorb all the knowledge this field has to offer. My days are often spent engrossed in books, learning new things. Cricket is my best engagement next to study. While I cherish solitary moments of self-discovery, I equally relish the joy of good company. My enthusiasm for learning drives me, and I always strive to make the most of my time. I prefer exciting challenges over mundane games and value meaningful connections over fleeting distractions. My focus is on personal growth and crafting a future that aligns with my interests, steering clear of what doesn't resonate with my aspirations.</p>
