--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
 
       <div class="media">
         <a
-          href="//www.instagram.com/sravan.reddy.1612147?utm_source=qr&r=nametag">         <img src="2993766_instagram_social media_icon.png" alt=""></a>
-        <a href="//www.linkedin.com/in/sravan-teja-reddy-b37680289">
+          target="_blank"  href="//www.instagram.com/sravan.reddy.1612147?utm_source=qr&r=nametag">         <img src="2993766_instagram_social media_icon.png" alt=""></a>
+        <a target="_blank"  href="//www.linkedin.com/in/sravan-teja-reddy-b37680289">
 
           <img src="1920528_linkedin_logo_network_social_icon.png" alt="">
         </a>
-        <a href="https://github.com/sravanr788">
+        <a target="_blank"  href="https://github.com/sravanr788">
         <img src="icons8-github-64.png" alt="">
         </a>
       </div>
